Setup Spring Batch job to transfer data from source db to target db

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
-spring.batch.jdbc.initialize-schema=ALWAYS
-spring.main.allow-bean-definition-overriding=true
-spring.batch.job.enabled=false
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.batch.jdbc.initialize-schema=always
+
+spring.datasource.url=jdbc:postgresql://localhost:5442/testDb
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
