--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,23 +2,11 @@ version: '3.9'
 
 services:
 
-  source-db:
+  db:
     image: postgres:13.4
-    container_name: source-db
     ports:
-      - "5441:5432"
+      - "5442:5432"
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
-      - POSTGRES_DB=sourceDb
-
-  target-db:
-    image: postgres:13.4
-    container_name: target-db
-    restart: always
-    environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: targetDb
-    ports:
-      - "5442:5432"
+      - POSTGRES_DB=testDb
