--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,20 @@
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-spring.datasource.url=jdbc:postgresql://localhost:5442/testDb
+spring.datasource.jdbc-url=jdbc:postgresql://localhost:5442/testDb
 spring.datasource.username=postgres
 spring.datasource.password=postgres
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.driverClassName=org.postgresql.Driver
 
 spring.main.allow-bean-definition-overriding=true
 spring.batch.job.enabled=false
 spring.batch.jdbc.initialize-schema=always
 
 scheduler.products.cron=*/10 * * * * ? *
+
+spring.quartz.jdbc.initialize-schema=always
+spring.quartz.job-store-type=jdbc
+
+#spring.quartz.properties.org.quartz.scheduler.instanceId=AUTO
+#spring.quartz.properties.org.quartz.jobStore.class=org.quartz.impl.jdbcjobstore.JobStoreTX
+#spring.quartz.properties.org.quartz.jobStore.driverDelegateClass=org.quartz.impl.jdbcjobstore.StdJDBCDelegate
+#spring.quartz.properties.org.quartz.jobStore.tablePrefix=QRTZ_
