--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,3 +10,4 @@ services:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_DB=testDb
+    command: ["postgres", "-c", "log_statement=all", "-c", "log_destination=stderr"]
